Fixed overflow in mobile site header

--- a/src/scss/partials/global/components/_header.scss
+++ b/src/scss/partials/global/components/_header.scss
@@ -12,7 +12,6 @@
 	
 	display: table;
 	width: 100%;
-	overflow: visible !important;
 	background-color: $color-spot-1;
 	
 	@include vendorize("transition", background-color 0.125s ease-in);
@@ -28,6 +27,7 @@
 	}
 
 	.content {
+		overflow: hidden;
 		padding-top: 8px;
 		padding-bottom: 8px;
 	}
